--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ p, td, th, li {
 /* Masthead */
 .masthead {
     text-align: center;
-    padding: 3rem 0;
+    padding: 3rem 1rem;
 }
 
 @media screen and (min-width: 780px) {
@@ -414,7 +414,6 @@ body {
 .container {
     max-width: 1140px;
     margin: 0 auto;
-    padding: 0 1rem;
 }
 
 @media screen and (min-width: 780px) {
@@ -498,9 +497,14 @@ body {
 footer {
     color: rgba(255,255,255,.5);
     background-color: #333;
-    margin-top: 2rem;
     padding: 2rem;
     text-align: center;
+}
+
+@media screen and (min-width: 780px) {
+    footer {
+        margin-top: 2rem;
+    }
 }
 
 /* 968 / 740 */
