--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,16 @@ p, td, th, li {
     padding: 2rem;
 }
 
+.modal__buttons {
+    text-align: right;
+    border-top: solid 1px rgba(0,0,0,.05);
+    padding-top: 2rem;
+}
+
+.modal__buttons .btn {
+    margin-left: .5rem;
+}
+
 /* Form */
 form label {
     display: block;
@@ -523,16 +533,6 @@ form label input[type=checkbox] {
 
 .form__field {
     margin-bottom: 2rem;
-}
-
-.form__buttons {
-    text-align: right;
-    border-top: solid 1px rgba(0,0,0,.05);
-    padding-top: 2rem;
-}
-
-.form__buttons .btn {
-    margin-left: .5rem;
 }
 
 form fieldset {
